fixed input text being too light to see on certain themes

--- a/chattystyle.css
+++ b/chattystyle.css
@@ -421,6 +421,7 @@ body {
 
 #editMode {
   width: 100%;
+  color: black;
 }
 
 /***************************** CURSING! ********************************/
